# Mooze

./: .gitignore  LICENSE  README.md  ascii-plasma.js  downloader.py  index.html  main.py  pyproject.toml  requirements.txt  style.css
docs/: index.html
mooze/: downloader.py  main.py
mooze.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
